plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.38'
}

version = project.property('mod_version')
group = project.property('mod_group_id')

mixin {
    add sourceSets.main, "soundattract.refmap.json"
    config "soundattract.mixins.json"
    defaultObfuscationEnv = "searge"
    debug.verbose     = true
    debug.export      = true
    dumpTargetOnFailure = true
}

base {
    archivesName = "forge_${project.property('mod_id')}_${project.property('minecraft_version')}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

minecraft {
    mappings channel: project.property('mapping_channel'), version: project.property('mapping_version')
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property "mixin.config", "soundattract.mixins.json"
            mods {
                "${project.property('mod_id')}" {
                    source sourceSets.main
                }
            }
        }
        client {
            property 'forge.enabledGameTestNamespaces', project.property('mod_id')
            property "mixin.config", "soundattract.mixins.json"
            jvmArgs += [
        "-Dmixin.env.remapRefMap=true",
        "-Dmixin.debug.verbose=true",
        "-Dmixin.debug.export=true",
        "-Dmixin.debug.verify=true",
        "-Dmixin.debug.countInjections=true",
        "-Dmixin.checks=true",
        "-Dmixin.dumpTargetOnFailure=true"
                    ] 
        }
        server {
            property 'forge.enabledGameTestNamespaces', project.property('mod_id')
            property "mixin.config", "soundattract.mixins.json"
            args '--nogui'
            jvmArgs += [
        "-Dmixin.env.remapRefMap=true",
        "-Dmixin.debug.verbose=true",
        "-Dmixin.debug.export=true",
        "-Dmixin.debug.verify=true",
        "-Dmixin.debug.countInjections=true",
        "-Dmixin.checks=true",
        "-Dmixin.dumpTargetOnFailure=true"
                    ]        
                }
        gameTestServer {
            property 'forge.enabledGameTestNamespaces', project.property('mod_id')
        }
        data { 
            workingDirectory project.file('run-data')
            args '--mod', project.property('mod_id'), '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}
sourceSets.main.resources { srcDir 'src/generated/resources' }

tasks.processResources { 
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

repositories {
    maven { name = 'SpongePowered'; url = 'https://repo.spongepowered.org/maven/' }
    mavenCentral()
    maven { name = "henkelmax.public"; url = 'https://maven.maxhenkel.de/repository/public' }
    maven { name = "Modrinth"; url = "https://api.modrinth.com/maven"; content { includeGroup "maven.modrinth" } }
    mavenLocal()
    maven { name = "Curse Maven"; url = "https://www.cursemaven.com"; content { includeGroup "curse.maven" } }
    maven {
        name = "plasmoverse-releases"
        url = "https://repo.plasmoverse.com/releases"
    }
    flatDir {
        dirs 'libs'
    }
}

dependencies {
        minecraft "net.minecraftforge:forge:${project.property('minecraft_version')}-${project.property('forge_version')}"
    compileOnly "de.maxhenkel.voicechat:voicechat-api:2.5.27"
    runtimeOnly fg.deobf("maven.modrinth:simple-voice-chat:forge-1.20.1-2.5.27")
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
    compileOnly "curse.maven:timeless-and-classics-zero-1028108:6654541"
    compileOnly files('libs/enhancedai-2.7.0.jar')
    compileOnly files('libs/insanelib-1.21.14.jar')
    compileOnly "su.plo.voice.api:server:2.1.5"
    compileOnly "su.plo.voice.api:client:2.1.5"

}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version: project.property('minecraft_version'),
            minecraft_version_range: project.property('minecraft_version_range'),
            forge_version: project.property('forge_version'),
            forge_version_range: project.property('forge_version_range'),
            loader_version_range: project.property('loader_version_range'),
            mod_id: project.property('mod_id'),
            mod_name: project.property('mod_name'),
            mod_license: project.property('mod_license'),
            mod_version: project.property('mod_version'),
            mod_authors: project.property('mod_authors'),
            mod_description: project.property('mod_description')
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : project.property('mod_id'),
                'Specification-Vendor'    : project.property('mod_authors'),
                'Specification-Version'   : project.property('mod_version'),
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.property('mod_version'), 
                'Implementation-Vendor'   : project.property('mod_authors'),
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
